# github-data-track

./: .gitignore  ghdata.sqlite  pyproject.toml  requirements.txt
src/ghdata/: __main__.py  config.py  github_client.py  report.py  storage.py  transforms.py
src/ghdata.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/tests/: test_github_client.py  test_metrics.py  test_pagination.py  test_smoke.py  test_storage.py
